--- a/package.json
+++ b/package.json
@@ -1,12 +1,40 @@
 {
-  "name": "react-native-call-detection",
-  "version": "1.8.2",
-  "description": "Get different phone call states for iOS and Android along with incoming phone number(just for android)",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/priteshrnandgaonkar/react-native-call-detection"
+  "_from": "react-native-call-detection",
+  "_id": "react-native-call-detection@1.9.0",
+  "_inBundle": false,
+  "_integrity": "sha512-UaF/I1cp2UnIbdCh3UmrFIA4an8El1gIBM6uIbM+OYCrfe5btIj7DYtjqtNoeKOtF7fap32m37v6lafQ9SZHpg==",
+  "_location": "/react-native-call-detection",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "react-native-call-detection",
+    "name": "react-native-call-detection",
+    "escapedName": "react-native-call-detection",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/react-native-call-detection/-/react-native-call-detection-1.9.0.tgz",
+  "_shasum": "2477690158768e01842f0bd5c2544e4a3247e616",
+  "_spec": "react-native-call-detection",
+  "_where": "/Users/payalkevadiya/Desktop/KrunalKevadiya/Livy",
+  "author": {
+    "name": "Pritesh Nandgaonkar",
+    "email": "prit.nandgaonkar@gmail.com",
+    "url": "https://github.com/priteshrnandgaonkar"
+  },
+  "bugs": {
+    "url": "https://github.com/priteshrnandgaonkar/react-native-call-detection/issues"
+  },
+  "bundleDependencies": false,
+  "deprecated": false,
+  "description": "Get different phone call states for iOS and Android along with incoming phone number(just for android)",
+  "homepage": "https://github.com/priteshrnandgaonkar/react-native-call-detection#readme",
   "keywords": [
     "react-native",
     "call",
@@ -14,9 +42,15 @@
     "iOS",
     "android"
   ],
-  "author": "Pritesh Nandgaonkar <prit.nandgaonkar@gmail.com> (https://github.com/priteshrnandgaonkar)",
   "license": "MIT",
+  "main": "index.js",
+  "name": "react-native-call-detection",
   "peerDependencies": {
     "react-native": ">=0.26.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/priteshrnandgaonkar/react-native-call-detection.git"
+  },
+  "version": "1.9.0"
 }
